--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/language-server": "^0.14.24",
     "@tailwindcss/vite": "^4.1.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
