--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # Here is the deployment action
+      - name: Install dependencies
+        run: npm ci
+      - name: Build the project
+        run: npm run build
       - name: FTP Deploy
         uses: airvzxf/ftp-deployment-action@latest
         with:
